--- a/index.html
+++ b/index.html
@@ -67,27 +67,8 @@
 <audio data-key="76" src="sounds/01 - JavaScript Drum Kit_sounds_tom.wav"></audio>
 
 
-
-
-<script>
-     function playSound(e){
-        const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
-        const key = document.querySelector(`.key[data-key="${e.keyCode}"]`);
-        if(!audio) return; //verifica a entrada
-        audio.currentTime= 0; //reinicia o play
-        audio.play();
-        key.classList.add('playing'); //adiciona uma classe style para a key
-    
-};
-
-    function removeTransition(e) {
-        if (e.propertyName !== 'transform') return;
-        this.classList.remove('playing')
-    }
-    const keys = document.querySelectorAll('.key');
-    keys.forEach(key => key.addEventListener('transitionend', removeTransition));
-    window.addEventListener('keydown', playSound);
-
+<script src="./JavaScript/main.js">
+async
 </script>
 
 
